--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,13 @@
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
           <input type="submit" class="ghost-button" value="Get Weather">
         </form>
+        <% if(weather !== null){ %>
+          <h3><%= weather %></h3>
+        <% } %>
+
+        <% if(error !== null){ %>
+          <p><%= error %></p>
+        <% } %>
       </fieldset>
     </div>
   </body>
